--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="left">
         <ul>
-          <li><a href="home.html"><u>HOME</u></a></li>
+          <li><a href="index.html"><u>HOME</u></a></li>
           <li><a href="regis.html">REGISTER</a></li>
           <li><a href="sign.html"> SIGN IN</a></li>
         </ul>
