--- a/regis.html
+++ b/regis.html
@@ -11,7 +11,7 @@
       <div class="nav">
         <h2><span class="note">Note</span><span class="it">It!</span></h2>
         <ul>
-          <li><a href="home.html">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li><a href="regis.html"><u>REGISTER</u></a></li>
           <li><a href="sign.html">SIGN IN</a></li>
         </ul>
