--- a/admin.html
+++ b/admin.html
@@ -12,20 +12,20 @@
         <h2><span class="note">Note</span><span class="its">It!</span></h2>
         <div class="sidebar">
           <button>
-            <a href="home.html"> <img src="notes.png" class="" />All Notes </a>
+            <a href="admin.html"> <img src="notes.png" class="" />All Notes </a>
           </button>
           <button>
-            <a href="home.html">
+            <a href="admin.html">
               <img src="favorites.png" class="" />Favorites
             </a>
           </button>
           <button>
-            <a href="home.html">
+            <a href="admin.html">
               <img src="archives.png" class="" />Archives
             </a>
           </button>
           <button>
-            <a href="home.html"> <img src="logout.png" />Log-out </a>
+            <a href="index.html"> <img src="logout.png" />Log-out </a>
           </button>
         </div>
       </div>
